Fix spacing

--- a/styles/components/_Markdown.scss
+++ b/styles/components/_Markdown.scss
@@ -3,12 +3,6 @@
         padding-top: 50px;
         padding-bottom: 50px;
 
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
         p,
         ul,
         img {
@@ -25,8 +19,10 @@
         h4,
         h5,
         h6 {
+            margin: 0 auto;
+            max-width: $xs;
             margin-top: 2rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.225rem;
             scroll-margin-top: 4.125rem;
         }
 
@@ -84,6 +80,7 @@
         }
 
         .rehype-code-title {
+            margin-top: 1rem;
             padding: 0.55rem 1.25rem;
             font-size: 0.875rem;
             line-height: 1.25rem;
@@ -306,12 +303,6 @@
         padding-top: 50px;
         padding-bottom: 50px;
 
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
         p,
         ul,
         img {
@@ -328,8 +319,10 @@
         h4,
         h5,
         h6 {
+            margin: 0 auto;
+            max-width: $xs;
             margin-top: 2rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.225rem;
             scroll-margin-top: 4.125rem;
         }
 
@@ -386,6 +379,7 @@
         }
 
         .rehype-code-title {
+            margin-top: 1rem;
             padding: 0.55rem 1.25rem;
             font-size: 0.875rem;
             line-height: 1.25rem;
